<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".starter.AgeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">


        <TextView
            android:id="@+id/age_text"
            style="@style/TextViewQuestionStyle"
            android:text="@string/age_ques" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/age_text"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/enter_age"
                style="@style/EditTextFragment"
                android:hint="@string/age_num"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="years"
                android:textColor="@color/textColor"
                android:textSize="30sp" />


        </LinearLayout>

        <Button
            android:id="@+id/next_btn_name"
            style="@style/FragmentButtonStyle"
            android:text="@string/next_btn" />

    </RelativeLayout>

</layout>